# api/openapi/crds.gen.yaml
@@ -944,6 +944,23 @@ components:
                 CredentialsSecretName is the reference to the secret containing the API key.
                 It contains `apiKey` key with the API key value.
               type: string
+            instanceConstraints:
+              description: |-
+                InstanceConstraints defines compatibility requirements and prerequisites that must be satisfied by an Instance before this monitoring config can be used.
+                This allows the monitoring config to express specific requirements about the instance configuration needed for successful monitoring operations,
+                such as required instance fields, or other instance properties.
+                When an Instance references this monitoring config, the operator validates
+                the Instance against these constraints.
+              properties:
+                requiredFields:
+                  description: |-
+                    RequiredFields contains a list of fields that must be set in the Instance spec.
+                    Each key is a JSON path expressions that points to a field in the Instance spec.
+                    For example, ".spec.components.monitoring.customSpec.monitoringConfigName".
+                  items:
+                    type: string
+                  type: array
+              type: object
             pmm:
               description: PMM is configuration specific for monitoring using PMM
                 tool.
@@ -954,6 +971,12 @@ components:
               required:
               - url
               type: object
+            supportedProviders:
+              description: SupportedProviders is the list of providers that supports
+                monitoring config.
+              items:
+                type: string
+              type: array
             type:
               description: Type is the name of monitoring tool (e.g., "pmm").
               enum:
