# internal/server/api/crds.gen.go
@@ -661,11 +661,26 @@ type MonitoringConfig struct {
 		// It contains `apiKey` key with the API key value.
 		CredentialsSecretName string `json:"credentialsSecretName"`
 
+		// InstanceConstraints InstanceConstraints defines compatibility requirements and prerequisites that must be satisfied by an Instance before this monitoring config can be used.
+		// This allows the monitoring config to express specific requirements about the instance configuration needed for successful monitoring operations,
+		// such as required instance fields, or other instance properties.
+		// When an Instance references this monitoring config, the operator validates
+		// the Instance against these constraints.
+		InstanceConstraints *struct {
+			// RequiredFields RequiredFields contains a list of fields that must be set in the Instance spec.
+			// Each key is a JSON path expressions that points to a field in the Instance spec.
+			// For example, ".spec.components.monitoring.customSpec.monitoringConfigName".
+			RequiredFields *[]string `json:"requiredFields,omitempty"`
+		} `json:"instanceConstraints,omitempty"`
+
 		// Pmm PMM is configuration specific for monitoring using PMM tool.
 		Pmm *struct {
 			// Url URL is url to the monitoring config.
 			Url string `json:"url"`
 		} `json:"pmm,omitempty"`
+
+		// SupportedProviders SupportedProviders is the list of providers that supports monitoring config.
+		SupportedProviders *[]string `json:"supportedProviders,omitempty"`
 
 		// Type Type is the name of monitoring tool (e.g., "pmm").
 		Type MonitoringConfigSpecType `json:"type"`
